# cpp-course-2020

./: .gitignore
homework1/: CMakeLists.txt  main.cpp  readme.txt
homework2/: Blocks.h  CMakeLists.txt  main.cpp  readme.txt
